1-games-network-policy-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
  namespace: games
spec:
  podSelector:
    matchLabels:
      app: game-api
  ingress: []
