2-all-policy-from-api-to-app.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-appapi
  namespace: games  
spec:
  podSelector:
    matchLabels:
        app: game-api
        role: backendapi        
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: football-app
            role: front
